--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -6,18 +6,18 @@
                     <h2 class="logo">JUSTICE LEAGUE</h2>
                 </a>
             </div>
-            <ul class="nav-button" role="navigation">
-                <a href="#" class="button is-active">
+            <ul class="nav-button-wrapper" role="navigation">
+                <a href="#" class="nav-btn is-active">
                     <li class="buttons">
                         Accueil
                     </li>
                 </a>
-                <a href="#" class="button">
+                <a href="#" class="nav-btn">
                     <li class="buttons">
                         Personnages
                     </li>
                 </a>
-                <a href="#" class="button">
+                <a href="#" class="nav-btn">
                     <li class="buttons">
                         Comics
                     </li>
