--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -32,3 +32,44 @@
         </nav>
     </div>
 </header>
+
+<div class="banner">
+    <div class ="banner-img">
+        <%= image_tag("banner_comics.jpg") %>
+    </div>
+    <div class="banner-desc">
+        <div class="banner-title">
+            <h1>Découvrez l'univers</h1><br/>
+            <h1>de la JUSTICE LEAGUE</h1>
+        </div>
+        <a href="#" class="btn btn-indigo-full">Cliquez ici pour plus d'informations</a>
+    </div>
+    <div class="banner-overlay"></div>
+</div>
+<div class="container">
+<div class="tabs-wrapper">
+    <ul class="tabs-item">
+        <li><a href="#" class="btn btn-indigo-empty">Membres fondateurs</a></li>
+        <li><a href="#" class="btn btn-indigo-empty">Membres récurrents</a></li>
+        <li><a href="#" class="btn btn-indigo-empty">Super-vilains</a></li>
+    </ul>
+</div>
+
+<div class="cards-wrapper">
+    <div class="cards-item">
+        <span class="character-name">Batman</span>
+        <p class="character-desc">Lorem ipsum lol lol chauve-souris je tape sur les criminels</p>
+    </div>
+    <div class="cards-item">
+        <span class="character-name">Superman</span>
+        <p class="character-desc">Lorem ipsum lol lol kryptonite je suis complètement cheaté</p>
+    </div>
+    <div class="cards-item">
+        <span class="character-name">Wonderwoman</span>
+        <p class="character-desc">Lorem ipsum lol lol lasso arrêtez de fantasmer sur moi les nerds</p>
+    </div>
+</div>
+</div>
+<footer>
+    <p>Enjoy my website <3</p>
+</footer>
