--- a/app/assets/stylesheets/componants/bouton.css
+++ b/app/assets/stylesheets/componants/bouton.css
@@ -1,11 +1,13 @@
 .btn {
     padding: 10px;
-    border-radius: 20px
+    border-radius: 20px;
 }
 
 .btn-indigo-full {
     background-color: #4c5365;
-    border: 1px solid #313131
+    border: 4px solid #4c5365;
+
+    transition: all 0.1s ease-in
 }
 
 .btn-indigo-full:hover {
@@ -14,4 +16,11 @@
 
 .btn-indigo-empty {
     border: 1px solid #4c5365;
+
+    transition: all 0.1s ease-in
+}
+
+.btn-indigo-empty:hover {
+    background-color: #4c5365;
+    color: white
 }
