tabs pas ouf physiquement : done

--- a/app/assets/stylesheets/componants/navbar.css
+++ b/app/assets/stylesheets/componants/navbar.css
@@ -11,6 +11,10 @@ nav {
     justify-content: space-between;
 }
 
+.logo:hover {
+    color: antiquewhite
+}
+
 nav>* {
     display: flex;
     align-items: center
