--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -46,9 +46,8 @@
     </div>
     <div class="banner-overlay"></div>
 </div>
-<div class="container">
 <div class="tabs-wrapper">
-    <ul class="tabs-item">
+    <ul class="tabs-item container">
         <li><a href="#" class="btn btn-indigo-empty">Membres fondateurs</a></li>
         <li><a href="#" class="btn btn-indigo-empty">Membres récurrents</a></li>
         <li><a href="#" class="btn btn-indigo-empty">Super-vilains</a></li>
@@ -68,7 +67,6 @@
         <span class="character-name">Wonderwoman</span>
         <p class="character-desc">Lorem ipsum lol lol lasso arrêtez de fantasmer sur moi les nerds</p>
     </div>
-</div>
 </div>
 <footer>
     <p>Enjoy my website <3</p>
