--- a/app/assets/stylesheets/componants/bouton.css
+++ b/app/assets/stylesheets/componants/bouton.css
@@ -1,6 +1,6 @@
 .btn {
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 17px;
 }
 
 .btn-indigo-full {
@@ -15,12 +15,13 @@
 }
 
 .btn-indigo-empty {
-    border: 1px solid #4c5365;
+    border: 1px solid antiquewhite;
 
     transition: all 0.1s ease-in
 }
 
 .btn-indigo-empty:hover {
     background-color: #4c5365;
+    border: 1px solid #4c5365;
     color: white
 }
