--- a/app/assets/stylesheets/componants/avatar.css
+++ b/app/assets/stylesheets/componants/avatar.css
@@ -1,6 +1,4 @@
 .avatar {
-    height: 75px;
-    width: 75px;
     border-radius: 50%;
     overflow: hidden;
     border: 2px solid white;
@@ -9,4 +7,15 @@
 .avatar>img {
     height: 100%;
     width: 100%
+}
+
+
+.avatar-small {
+    height: 50px;
+    width: 50px
+}
+
+.avatar-large {
+    height: 110px;
+    width: 110px
 }
